<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@id/txtTitle"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:imeOptions="actionNext"
        android:hint="@string/Please_enter_your_name" />

    <LinearLayout

        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtName"
        android:weightSum="2">

        <EditText
            android:id="@+id/edtEnterPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:layout_weight="1"
            android:hint="@string/Please_enter_password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtConformPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:inputType="textPassword"
            android:layout_marginTop="50dp"
            android:imeOptions="actionNext"
            android:layout_weight="1"
            android:hint="@string/Please_enter_conform_password"
            android:textSize="20sp" />
    </LinearLayout>
    <EditText
        android:id="@+id/edtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@id/edtPassword"
        android:imeOptions="actionDone"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:hint="@string/enter_address"
        android:autofillHints="" />

       <Button
           android:id="@+id/btnSubmit"
           android:layout_centerHorizontal="true"
           android:layout_below="@id/edtPassword"
           android:layout_width="wrap_content"
           android:layout_marginTop="180dp"
           android:layout_height="wrap_content"
           android:text="@string/submit"
           android:textSize="20sp"/>

   <ImageView
       android:id="@+id/imgRegi"
       android:layout_width="80dp"
       android:layout_below="@id/btnSubmit"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="40dp"
       android:layout_height="80dp"
       android:src="@drawable/img"
       />

</RelativeLayout>